<resources>
    <string name="app_name">ProjectTraining</string>
    <string name="select">I am a...</string>
    <string name="login">Login</string>
    <string name="slogan">Meals made with love</string>

    <!--cook_account_warning_dialog.xml-->
    <string name="dialog_title">A message from the administrator</string>
    <string name="dialog_ok_button">OK</string>
    <string name="dialog_dear_text">Dear</string>
    <string name="account_temporarily_suspended_text">Your account has been suspended until</string>
    <string name="account_permanently_suspended_text">Your account has been suspended permanently.</string>
    <string name="account_suspended_text">Sorry for the inconvenience.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--fragment_login.xml-->
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="user_type_empty_message">The type of user is required.</string>
    <string name="password_empty_message">Password is required.</string>
    <string name="email_empty_message">Email is required.</string>
    <string name="email_error_message">Wrong email address format.</string>

    <!--fragment_register_client.xml-->
    <string name="register_firstName_text">First name</string>
    <string name="register_lastName_text">Last name</string>
    <string name="register_emailAddress_text">Email Address</string>
    <string name="register_newPassword_text">New Password</string>
    <string name="register_homeAddress_text">Home Address</string>
    <string name="register_creditCardInfo_text">CreditCard Number</string>

    <!--fragment_register_cook.xml-->
    <string name="cook_firstName_text">First name</string>
    <string name="cook_lastName_text">Last name</string>
    <string name="cook_emailAddress_text">Email Address</string>
    <string name="cook_newPassword_text">New Password</string>
    <string name="cook_homeAddress_text">Home Address</string>
    <string name="cook_description_text">Add a description</string>
    <string name="capture_void_cheque_text">Capture void cheque image</string>
    <string name="capture_void_cheque_error_message">Void cheque image is required</string>
</resources>